# page-shell-extension

./: Makefile  meson.build  page.conf.in
gschemas/: meson.build  net.hzog.page.gschema.xml
page-data/: meson.build  net.hzog.Shell.desktop.in  page.desktop  page.session
page-shell@hzog.net/: Page.js  extension.js  meson.build  metadata.json  page-client-managed.js  page-component.js  page-notebook.js  page-split.js  page-tree.js  page-view-floating.js  page-view-fullscreen.js  page-view-notebook.js  page-view.js  page-viewport.js  page-workspace.js
src/: meson.build  page-box.hxx  page-client-managed.cxx  page-client-managed.hxx  page-config-handler.cxx  page-dropdown-menu.cxx  page-dropdown-menu.hxx  page-grab-handlers.cxx  page-grab-handlers.hxx  page-handler.cxx  page-handler.h  page-icon-handler.cxx  page-icon-handler.hxx  page-init.cxx  page-init.h  page-key-desc.hxx  page-notebook.cxx  page-notebook.hxx  page-page-component.cxx  page-page-component.hxx  page-page-types.hxx  page-page.cxx  page-page.hxx  page-popup-split.cxx  page-popup-split.hxx  page-region.hxx  page-simple2-theme.cxx  page-simple2-theme.hxx  page-split.cxx  page-split.hxx  page-theme-managed-window.hxx  page-theme-notebook.hxx  page-theme-split.hxx  page-theme-tab.hxx  page-theme.hxx  page-tiny-theme.cxx  page-tiny-theme.hxx  page-tree.cxx  page-tree.hxx  page-utils.cxx  (+15 more)
