
install_data([
  'extension.js',
  'Page.js',
  'page-client-managed.js',
  'page-component.js',
  'page-notebook.js',
  'page-split.js',
  'page-tree.js',
  'page-view-floating.js',
  'page-view-fullscreen.js',
  'page-view.js',
  'page-view-notebook.js',
  'page-viewport.js',
  'page-workspace.js',
  'metadata.json',
  'stylesheet.css'],
  install_dir: join_paths(pkgdatadir, 'extensions', 'page-shell@hzog.net')
)

